test(fuzz): auto-restart after Victory/Lose to keep fuzzing; ensure non-interactive; remove extra helpers