@@ -69,9 +69,9 @@ public class FuzzTest {
         boolean logSeed = Boolean.getBoolean("fuzz.logSeed");
         boolean slowMode = Boolean.getBoolean("fuzz.slow");
         boolean crossLevels = Boolean.getBoolean("fuzz.crossLevels");
-    boolean enablePause = Boolean.parseBoolean(System.getProperty("fuzz.enablePause","false"));
-    boolean allowSave = Boolean.parseBoolean(System.getProperty("fuzz.allowSave", "false"));
-    boolean allowResume = Boolean.parseBoolean(System.getProperty("fuzz.allowResume", "false"));
+        boolean enablePause = Boolean.parseBoolean(System.getProperty("fuzz.enablePause","false"));
+        boolean allowSave = Boolean.parseBoolean(System.getProperty("fuzz.allowSave", "false"));
+        boolean allowResume = Boolean.parseBoolean(System.getProperty("fuzz.allowResume", "false"));
 
         if (logSeed) {
             System.out.println("[FUZZ] seed=" + seed + " ms=" + durationMillis +
@@ -79,8 +79,8 @@ public class FuzzTest {
                     " enablePause=" + enablePause);
         }
 
-    final int MAX_AUDIO_FAILS = Integer.getInteger("fuzz.maxAudioFails", 5);
-    int audioFailCount = 0;
+        final int MAX_AUDIO_FAILS = Integer.getInteger("fuzz.maxAudioFails", 5);
+        int audioFailCount = 0;
 
         AppController controller = AppController.of();
         if (!safeStartNewGame(controller, initialLevel)) {
@@ -98,10 +98,10 @@ public class FuzzTest {
         List<Input> levelLoads = crossLevels
                 ? List.of(Input.LOAD_LEVEL_1, Input.LOAD_LEVEL_2)
                 : Collections.emptyList();
-    boolean allowExit = Boolean.getBoolean("fuzz.allowExit");
-    List<Input> rare = allowExit
-        ? (allowSave ? List.of(Input.EXIT, Input.SAVE) : List.of(Input.EXIT))
-        : (allowSave ? List.of(Input.SAVE) : Collections.emptyList());
+        boolean allowExit = Boolean.getBoolean("fuzz.allowExit");
+        List<Input> rare = allowExit
+            ? (allowSave ? List.of(Input.EXIT, Input.SAVE) : List.of(Input.EXIT))
+            : (allowSave ? List.of(Input.SAVE) : Collections.emptyList());
 
         List<Input> executed = new ArrayList<>(4096);
 
@@ -125,122 +125,77 @@ public class FuzzTest {
         Instant end = Instant.now().plusMillis(durationMillis);
         int moves = 0;
 
-    boolean pausedRecently = false;
-        long nonPlayStateStartMs = -1; // simplified: removed invalidInRow & forcedResumeAttempts
-
-        int audioWarns = 0;
-        final int AUDIO_WARN_LIMIT = 10;
-
         try {
             while (Instant.now().isBefore(end)) {
-
+                // If we somehow got paused (e.g., via PAUSE from rare/meta), try to return to Play
                 String stateName = controller.state().getClass().getSimpleName();
-                boolean isPlay = stateName.contains("Play");
-
-                if (!isPlay) {
-                    if (nonPlayStateStartMs < 0) nonPlayStateStartMs = System.currentTimeMillis();
-                } else {
-                    nonPlayStateStartMs = -1; // forcedResumeAttempts removed
+                if (stateName.contains("Paused")) {
+                    forcePlayIfPaused(controller, initialLevel, rnd);
+                    stateName = controller.state().getClass().getSimpleName();
                 }
 
-                // Auto-restart on Victory or Defeat to keep session active (no disabling logic anymore)
-                if (stateName.contains("Victory") || stateName.contains("Defeat")) {
-                    boolean ok = safeStartNewGame(controller, initialLevel);
-                    if (!ok) {
-                        audioFailCount++;
-                        if (audioFailCount >= MAX_AUDIO_FAILS) {
-                            System.out.println("[FUZZ][WARN] Too many audio-related restart failures (" + audioFailCount + ") continuing without restart.");
-                        }
-                    } else {
-                        lastPos = currentPlayerPos(controller);
-                        stagnationCounter = 0;
-                        inShake = false;
-                        shakeRemaining = 0;
-                        pausedRecently = false;
+                // Auto-recover from win/lose states by starting a new game
+                if (stateName.contains("Victory") || stateName.contains("Lose") || stateName.contains("Defeat")) {
+                    int nextLevel = initialLevel;
+                    if (crossLevels) {
+                        // alternate or randomize to keep variety
+                        nextLevel = (controller.level() == 1) ? 2 : 1;
+                        if (rnd.nextBoolean()) nextLevel = rnd.nextBoolean() ? 1 : 2;
                     }
-                    // Regardless, proceed to next loop iteration (do not send meta inputs in terminal states)
-                    continue;
-                }
-
-                if (!isPlay && (System.currentTimeMillis() - nonPlayStateStartMs) > 1000) {
-                    boolean ok = forcePlayIfPaused(controller, initialLevel, rnd);
-                    if (!ok) {
-                        audioFailCount++;
-                        // We no longer disable restarts; just log once threshold exceeded
-                        if (audioFailCount == MAX_AUDIO_FAILS) {
-                            System.out.println("[FUZZ][WARN] Reached audio fail threshold while paused.");
-                        }
-                    } else {
-                        nonPlayStateStartMs = -1;
-                        pausedRecently = false; // forcedResumeAttempts removed
+                    if (!safeStartNewGame(controller, nextLevel)) {
+                        // If audio failures prevent start, try the other level once
+                        if (nextLevel == 1) safeStartNewGame(controller, 2); else safeStartNewGame(controller, 1);
                     }
+                    // reset local movement heuristics after restart
+                    lastSuccessfulDir = null;
+                    stagnationCounter = 0;
+                    inShake = false;
+                    shakeRemaining = 0;
+                    lastPos = currentPlayerPos(controller);
+                    if (lastPos != null) visited.add(lastPos);
+                    continue; // proceed with next iteration after restart
                 }
 
-                // Final forced start block removed to avoid early termination.
+                // Pick next action
+                Input next = pickAction(controller, rnd, movement, meta, levelLoads, rare,
+                        success, fail, lastSuccessfulDir, stagnationCounter, inShake, crossLevels);
+                boolean movementInput = next == Input.MOVE_UP || next == Input.MOVE_DOWN ||
+                        next == Input.MOVE_LEFT || next == Input.MOVE_RIGHT;
 
-                Input next;
-                if (!isPlay) {
-                    // Avoid RESUME to prevent triggering load dialog; use CONTINUE to return to Play
-                    next = Input.CONTINUE;
-                } else if (pausedRecently) {
-                    if (enablePause && rnd.nextInt(100) < 25) {
-                        // Avoid RESUME when recovering from pause; prefer CONTINUE only
-                        next = Input.CONTINUE;
-            } else {
-                pausedRecently = false;
-                next = pickAction(controller, rnd, movement, meta, levelLoads, rare,
-                    success, fail, lastSuccessfulDir, stagnationCounter, inShake, crossLevels);
-                    }
-                } else {
-            next = pickAction(controller, rnd, movement, meta, levelLoads, rare,
-                success, fail, lastSuccessfulDir, stagnationCounter, inShake, crossLevels);
-                }
-
-                executed.add(next);
                 Position before = currentPlayerPos(controller);
-
                 try {
                     controller.handleInput(next);
-                } catch (UnsupportedOperationException | IllegalArgumentException ignored) {
-                } catch (RuntimeException rte) {
-                    if (rte.getMessage() != null && rte.getMessage().contains("background sound")) {
-                        if (audioWarns++ < AUDIO_WARN_LIMIT) {
-                            System.err.println("[FUZZ][AUDIO-WARN] Suppressed: " + rte.getMessage());
-                            if (audioWarns == AUDIO_WARN_LIMIT) {
-                                System.err.println("[FUZZ][AUDIO-WARN] Further audio warnings suppressed");
-                            }
-                        }
+                    executed.add(next);
+                } catch (RuntimeException e) {
+                    // Suppress background audio initialization failures a few times
+                    if (e.getMessage() != null && e.getMessage().contains("background sound") && audioFailCount < MAX_AUDIO_FAILS) {
                         audioFailCount++;
-                        // No longer disabling restarts; just note threshold
-                        if (audioFailCount == MAX_AUDIO_FAILS) {
-                            System.out.println("[FUZZ][WARN] Audio fail threshold reached (will continue attempts).");
-                        }
-                    } else {
-                        dumpSequence(seed, executed, rte);
-                        throw rte;
+                        System.err.println("[FUZZ][AUDIO-WARN] Suppressed during handleInput (" + audioFailCount + "/" + MAX_AUDIO_FAILS + ")");
+                        sleepQuiet(20);
+                        continue;
                     }
+                    throw e;
                 }
 
-                if (next == Input.PAUSE) pausedRecently = true;
-                if (next == Input.RESUME || next == Input.CONTINUE) pausedRecently = false;
-
-                boolean movementInput = movement.contains(next);
-                if (movementInput) {
-                    Position after = currentPlayerPos(controller);
-                    boolean moved = after != null && before != null && !after.equals(before);
-                    if (moved) {
-                        success.merge(next,1,Integer::sum);
-                        lastSuccessfulDir = next;
-                        stagnationCounter = 0; // invalidInRow removed
-                        if (after != null) visited.add(after);
-                    } else {
-                        fail.merge(next,1,Integer::sum);
-                        stagnationCounter++; // invalidInRow removed
-                    }
-                } else {
-                    // invalidInRow logic removed
+                // EXIT ends the loop early
+                if (next == Input.EXIT) {
+                    break;
                 }
 
+                // Movement success heuristic update
+                Position after = currentPlayerPos(controller);
+                boolean moved = movementInput && after != null && before != null && !after.equals(before);
+                if (moved) {
+                    success.merge(next,1,Integer::sum);
+                    lastSuccessfulDir = next;
+                    stagnationCounter = 0;
+                    if (after != null) visited.add(after);
+                } else if (movementInput) {
+                    fail.merge(next,1,Integer::sum);
+                    stagnationCounter++;
+                }
+
+                // Shake mode to escape stagnation
                 if (movementInput && !inShake && stagnationCounter >= stagnationThreshold) {
                     inShake = true;
                     shakeRemaining = 15 + rnd.nextInt(10);
@@ -252,6 +207,7 @@ public class FuzzTest {
                     System.out.println("[FUZZ][HEURISTIC] Leaving shake phase");
                 }
 
+                // Periodic status log
                 if ((moves % 60) == 0) {
                     int treas = safeCountTreasures(controller);
                     int keys = safeCountKeys(controller);
@@ -270,6 +226,7 @@ public class FuzzTest {
 
                 moves++;
 
+                // Short sleeps to avoid pegging CPU and to let tickers advance
                 if (slowMode) {
                     sleepQuiet(35 + rnd.nextInt(55));
                 } else if ((moves % 80) == 0) {
@@ -613,75 +570,9 @@ public class FuzzTest {
         System.out.println(sb);
         System.out.println("Re-run with: -Dfuzz.seed=" + seed);
         System.out.println("================================");
-        if (Boolean.getBoolean("fuzz.issue.markdown")) {
-            writeIssueMarkdown(seed, executed, t, sb.toString());
-        }
     }
 
-    /**
-     * Emits a Markdown report under {@code target/fuzz-issues/} containing the seed, stack trace,
-     * platform info, and the executed input sequence in CSV form.
-     *
-     * @param seed random seed used
-     * @param executed sequence of executed inputs
-     * @param t failure that occurred (nullable)
-     * @param csv CSV representation of {@code executed}
-     */
-    private void writeIssueMarkdown(long seed, List<Input> executed, Throwable t, String csv) {
-        java.io.File dir = new java.io.File("target/fuzz-issues");
-        if (!dir.exists() && !dir.mkdirs()) {
-            System.err.println("[FUZZ][ISSUE] Could not create directory: " + dir);
-            return;
-        }
-    String shortName = (t == null ? "no-exception" : t.getClass().getSimpleName());
-    String commit = Optional.ofNullable(System.getenv("CI_COMMIT_SHA"))
-        .or(() -> Optional.ofNullable(System.getenv("GIT_COMMIT")))
-        .orElse("unknown");
-        String fileName = String.format("fuzz-%s-seed-%d.md", shortName, seed);
-        java.io.File f = new java.io.File(dir, fileName);
-        try (java.io.PrintWriter pw =
-                     new java.io.PrintWriter(f, java.nio.charset.StandardCharsets.UTF_8)) {
-            pw.println("# Fuzzer Detected Exception: " + shortName);
-            pw.println();
-            pw.println("Commit: `" + commit + "`");
-            pw.println("Java: `" + System.getProperty("java.version") + "` OS: `" +
-                    System.getProperty("os.name") + " " + System.getProperty("os.arch") + "`");
-            pw.println();
-            pw.println("## Summary");
-            pw.println("Exception during fuzz run: `" + (t == null ? "(none)" : t.toString()) + "`.");
-            pw.println();
-            pw.println("## Reproduction");
-            pw.println("```bash");
-            pw.println("mvn -Dfuzz.seed=" + seed + " -Dfuzz.ms=15000 test");
-            pw.println("```");
-            pw.println();
-            pw.println("## Stack Trace (trimmed)");
-            pw.println("```");
-            if (t != null) {
-                java.io.StringWriter sw = new java.io.StringWriter();
-                t.printStackTrace(new java.io.PrintWriter(sw));
-                pw.println(sw.toString());
-            } else pw.println("(none)");
-            pw.println("```");
-            pw.println();
-            pw.println("## Input Sequence (CSV)");
-            pw.println("```");
-            pw.println(csv);
-            pw.println("```");
-            pw.println();
-            pw.println("## Labels");
-            pw.println("#detectedByFuzzer");
-            pw.println();
-            pw.println("## Suggested Steps");
-            pw.println("- Inspect stack frames.");
-            pw.println("- Re-run with same seed.");
-            pw.println("- Add regression test after fix.");
-        } catch (Exception e) {
-            System.err.println("[FUZZ][ISSUE] Failed to write issue markdown: " + e);
-        }
-        System.out.println("[FUZZ][ISSUE] Markdown written: " + f.getPath());
-    }
-
+    
     /**
      * Best-effort retrieval of the current commit hash from {@code .git/HEAD}.
      *
@@ -699,96 +590,4 @@ public class FuzzTest {
         try { Thread.sleep(millis); } catch (InterruptedException ie) { Thread.currentThread().interrupt(); }
     }
 
-    // ====== Tiny domain micro-tests (no GUI) to stabilize coverage ======
-    // These are quick, deterministic checks that bump domain coverage without adding new files.
-
-    private static class CountingObserver implements GameObserver {
-        int doors, drowns;
-        @Override public void onPlayerMove(Position newPosition) { /* not asserted */ }
-        @Override public void onKeyCollected(Key key) { /* not asserted */ }
-        @Override public void onTreasureCollected() { /* not asserted */ }
-        @Override public void onDoorOpened(Door door) { doors++; }
-        @Override public void onPlayerDrown(Player player) { drowns++; }
-    }
-
-    private Maze newFilledMaze(int rows, int cols) {
-        Maze m = new Maze(rows, cols);
-        for (int r = 0; r < rows; r++) for (int c = 0; c < cols; c++)
-            m.setTileAt(Free.of(new Position(c, r)));
-        return m;
-    }
-
-    @Test
-    public void microDomainCoverage() {
-        // 3x3 maze fully free; player starts at center (1,1)
-        Maze m = newFilledMaze(3,3);
-        CountingObserver obs = new CountingObserver();
-        m.addObserver(obs);
-
-        // Water on the right; moving RIGHT should drown and notify
-        m.setTileAt(Water.of(new Position(2,1)));
-        m.movePlayer(Direction.RIGHT);
-        org.junit.jupiter.api.Assertions.assertFalse(m.getPlayer().isAlive());
-        org.junit.jupiter.api.Assertions.assertEquals(1, obs.drowns);
-
-        // Reset: new maze; test door blocks then opens with key
-        m = newFilledMaze(3,3); obs = new CountingObserver(); m.addObserver(obs);
-        Free doorFree = Free.of(new Position(0,1));
-        doorFree.setCollectable(Door.of(EntityColor.ORANGE));
-        m.setTileAt(doorFree);
-        Position start = m.getPlayer().getPos();
-        m.movePlayer(Direction.LEFT);
-        org.junit.jupiter.api.Assertions.assertEquals(start, m.getPlayer().getPos());
-        m.getPlayer().addKey(Key.of(EntityColor.ORANGE));
-        m.movePlayer(Direction.LEFT);
-        org.junit.jupiter.api.Assertions.assertEquals(new Position(0,1), m.getPlayer().getPos());
-        org.junit.jupiter.api.Assertions.assertEquals(1, obs.doors);
-
-        // ExitLock blocks until all treasures collected
-        m = newFilledMaze(3,3);
-        m.getPlayer().setTotalTreasures(1);
-        Free lockFree = Free.of(new Position(1,0));
-        lockFree.setCollectable(ExitLock.of());
-        m.setTileAt(lockFree);
-        start = m.getPlayer().getPos();
-        m.movePlayer(Direction.UP);
-        org.junit.jupiter.api.Assertions.assertEquals(start, m.getPlayer().getPos());
-        m.getPlayer().collectTreasure();
-        m.movePlayer(Direction.UP);
-        org.junit.jupiter.api.Assertions.assertEquals(new Position(1,0), m.getPlayer().getPos());
-
-        // Symbols and monster
-        m = newFilledMaze(3,3);
-        m.setTileAt(Wall.of(new Position(0,0)));
-        Free k = Free.of(new Position(2,0)); k.setCollectable(Key.of(EntityColor.GREEN)); m.setTileAt(k);
-        Free t = Free.of(new Position(0,2)); t.setCollectable(Treasure.of()); m.setTileAt(t);
-        m.setTileAt(Exit.of(new Position(2,2)));
-        m.setTileAt(Info.of(new Position(1,0)));
-        m.setTileAt(Water.of(new Position(0,1)));
-        org.junit.jupiter.api.Assertions.assertEquals("W", m.getSymbol(new Position(0,0)));
-        org.junit.jupiter.api.Assertions.assertEquals("K", m.getSymbol(new Position(2,0)));
-        org.junit.jupiter.api.Assertions.assertEquals("T", m.getSymbol(new Position(0,2)));
-        org.junit.jupiter.api.Assertions.assertEquals("E", m.getSymbol(new Position(2,2)));
-        org.junit.jupiter.api.Assertions.assertEquals("I", m.getSymbol(new Position(1,0)));
-        org.junit.jupiter.api.Assertions.assertEquals("~", m.getSymbol(new Position(0,1)));
-        org.junit.jupiter.api.Assertions.assertEquals("P", m.getSymbol(m.getPlayer().getPos()));
-        m.setMonster(Monster.of(new Position(1,2)));
-        org.junit.jupiter.api.Assertions.assertEquals("M", m.getSymbol(new Position(1,2)));
-
-        // Monster ping: place wall to force direction flip, then collide into player
-        m = newFilledMaze(3,3);
-        m.setTileAt(Wall.of(new Position(0,1))); // facing LEFT -> flip to RIGHT
-        m.getPlayer().setPos(new Position(2,1));
-        Monster mon = Monster.of(new Position(1,1));
-        m.setMonster(mon);
-        m.ping();
-        org.junit.jupiter.api.Assertions.assertEquals(Direction.RIGHT, mon.getDirection());
-        org.junit.jupiter.api.Assertions.assertEquals(new Position(2,1), mon.getPos());
-        org.junit.jupiter.api.Assertions.assertFalse(m.getPlayer().isAlive());
-
-        // Position negative setters throw
-        Position p = new Position(1,1);
-        org.junit.jupiter.api.Assertions.assertThrows(IllegalArgumentException.class, () -> p.setX(-1));
-        org.junit.jupiter.api.Assertions.assertThrows(IllegalArgumentException.class, () -> p.setY(-1));
-    }
 }
